--- a/pet-website.html
+++ b/pet-website.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>My Cat's Website</title>
   </head>
   <body>
     <h1>My cat's favorite toys</h1>
+    <img src="img/persiancat.jpg" alt="Persian cat">
     <h2>These are my cat's favorite toys to play with.</h2>
     <ul>
       <li>Catnip</li>
