--- a/pet-website.html
+++ b/pet-website.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/scripts.js"></script>
     <title>My Cat's Website</title>
   </head>
   <body>
     <h1>My cat's favorite toys</h1>
-    <img src="img/persiancat.jpg" alt="Persian cat">
+    <img class="imagecontainer" src="img/persiancat.jpg" alt="Persian cat" align="middle">
     <h2>These are my cat's favorite toys to play with.</h2>
     <ul>
       <li>Catnip</li>
@@ -30,5 +32,8 @@
     </ol>
 
     <p>Thanks for reading about my cat!</p>
+    <button id="darktheme" type="button" name="button">Dark Theme</button>
+    <button id="lighttheme" type="button" name="button">Light Theme</button>
+    <button id="Originaltheme" type="button" name="button">Original Theme</button>
   </body>
 </html>
